[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "masterblaster"
version = "0.0.1"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "generate stammdaten xml"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "lxml",
  "pyyaml"
  # tr
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[project.scripts]
masterblaster = "masterblaster:__main__"

[tool.setuptools]
packages = ["masterblaster"]